--- a/book/references.bib
+++ b/book/references.bib
@@ -2,13 +2,13 @@
 ---
 
 @misc{lee_2022_6497226,
-  author       = {Young Joon Lee},
-  title        = {eKorpkit: eKonomic Research Python Toolkit},
-  month        = apr,
-  year         = 2022,
-  publisher    = {Zenodo},
-  doi          = {10.5281/zenodo.6497226},
-  url          = {https://doi.org/10.5281/zenodo.6497226}
+  author    = {Young Joon Lee},
+  title     = {eKorpkit: eKonomic Research Python Toolkit},
+  month     = apr,
+  year      = 2022,
+  publisher = {Zenodo},
+  doi       = {10.5281/zenodo.6497226},
+  url       = {https://doi.org/10.5281/zenodo.6497226}
 }
 
 @misc{lee_2022_ekorpkit,
@@ -20,355 +20,380 @@
 }
 
 @inproceedings{handschke2018corpus,
-  title={A corpus of corporate annual and social responsibility reports: 280 million tokens of balanced organizational writing},
-  author={H{\"a}ndschke, Sebastian GM and Buechel, Sven and Goldenstein, Jan and Poschmann, Philipp and Duan, Tinghui and Walgenbach, Peter and Hahn, Udo},
-  booktitle={Proceedings of the first workshop on economics and natural language processing},
-  pages={20--31},
-  year={2018}
+  title     = {A corpus of corporate annual and social responsibility reports: 280 million tokens of balanced organizational writing},
+  author    = {H{\"a}ndschke, Sebastian GM and Buechel, Sven and Goldenstein, Jan and Poschmann, Philipp and Duan, Tinghui and Walgenbach, Peter and Hahn, Udo},
+  booktitle = {Proceedings of the first workshop on economics and natural language processing},
+  pages     = {20--31},
+  year      = {2018}
 }
 
 @article{vaswani2017attention,
-  title={Attention is all you need},
-  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
-  journal={Advances in neural information processing systems},
-  volume={30},
-  year={2017}
+  title   = {Attention is all you need},
+  author  = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal = {Advances in neural information processing systems},
+  volume  = {30},
+  year    = {2017}
 }
 
 @inproceedings{vig-2019-multiscale,
-    title = "A Multiscale Visualization of Attention in the Transformer Model",
-    author = "Vig, Jesse",
-    booktitle = "Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics: System Demonstrations",
-    month = jul,
-    year = "2019",
-    address = "Florence, Italy",
-    publisher = "Association for Computational Linguistics",
-    url = "https://www.aclweb.org/anthology/P19-3007",
-    doi = "10.18653/v1/P19-3007",
-    pages = "37--42",
+  title     = {A Multiscale Visualization of Attention in the Transformer Model},
+  author    = {Vig, Jesse},
+  booktitle = {Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics: System Demonstrations},
+  month     = jul,
+  year      = {2019},
+  address   = {Florence, Italy},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://www.aclweb.org/anthology/P19-3007},
+  doi       = {10.18653/v1/P19-3007},
+  pages     = {37--42}
 }
 
 @article{dosovitskiy2020image,
-  title={An image is worth 16x16 words: Transformers for image recognition at scale},
-  author={Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and others},
-  journal={arXiv preprint arXiv:2010.11929},
-  year={2020}
+  title   = {An image is worth 16x16 words: Transformers for image recognition at scale},
+  author  = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and others},
+  journal = {arXiv preprint arXiv:2010.11929},
+  year    = {2020}
 }
 
 @inproceedings{bertasius2021space,
-  title={Is space-time attention all you need for video understanding?},
-  author={Bertasius, Gedas and Wang, Heng and Torresani, Lorenzo},
-  booktitle={ICML},
-  volume={2},
-  number={3},
-  pages={4},
-  year={2021}
+  title     = {Is space-time attention all you need for video understanding?},
+  author    = {Bertasius, Gedas and Wang, Heng and Torresani, Lorenzo},
+  booktitle = {ICML},
+  volume    = {2},
+  number    = {3},
+  pages     = {4},
+  year      = {2021}
 }
 
 @inproceedings{dong2021attention,
-  title={Attention is not all you need: Pure attention loses rank doubly exponentially with depth},
-  author={Dong, Yihe and Cordonnier, Jean-Baptiste and Loukas, Andreas},
-  booktitle={International Conference on Machine Learning},
-  pages={2793--2803},
-  year={2021},
-  organization={PMLR}
+  title        = {Attention is not all you need: Pure attention loses rank doubly exponentially with depth},
+  author       = {Dong, Yihe and Cordonnier, Jean-Baptiste and Loukas, Andreas},
+  booktitle    = {International Conference on Machine Learning},
+  pages        = {2793--2803},
+  year         = {2021},
+  organization = {PMLR}
 }
 
 @article{han2021transformer,
-  title={Transformer in transformer},
-  author={Han, Kai and Xiao, An and Wu, Enhua and Guo, Jianyuan and Xu, Chunjing and Wang, Yunhe},
-  journal={Advances in Neural Information Processing Systems},
-  volume={34},
-  pages={15908--15919},
-  year={2021}
+  title   = {Transformer in transformer},
+  author  = {Han, Kai and Xiao, An and Wu, Enhua and Guo, Jianyuan and Xu, Chunjing and Wang, Yunhe},
+  journal = {Advances in Neural Information Processing Systems},
+  volume  = {34},
+  pages   = {15908--15919},
+  year    = {2021}
 }
 
 @article{akbari2021vatt,
-  title={Vatt: Transformers for multimodal self-supervised learning from raw video, audio and text},
-  author={Akbari, Hassan and Yuan, Liangzhe and Qian, Rui and Chuang, Wei-Hong and Chang, Shih-Fu and Cui, Yin and Gong, Boqing},
-  journal={Advances in Neural Information Processing Systems},
-  volume={34},
-  pages={24206--24221},
-  year={2021}
+  title   = {Vatt: Transformers for multimodal self-supervised learning from raw video, audio and text},
+  author  = {Akbari, Hassan and Yuan, Liangzhe and Qian, Rui and Chuang, Wei-Hong and Chang, Shih-Fu and Cui, Yin and Gong, Boqing},
+  journal = {Advances in Neural Information Processing Systems},
+  volume  = {34},
+  pages   = {24206--24221},
+  year    = {2021}
 }
 
 @article{reed2022generalist,
-  title={A generalist agent},
-  author={Reed, Scott and Zolna, Konrad and Parisotto, Emilio and Colmenarejo, Sergio Gomez and Novikov, Alexander and Barth-Maron, Gabriel and Gimenez, Mai and Sulsky, Yury and Kay, Jackie and Springenberg, Jost Tobias and others},
-  journal={arXiv preprint arXiv:2205.06175},
-  year={2022}
+  title   = {A generalist agent},
+  author  = {Reed, Scott and Zolna, Konrad and Parisotto, Emilio and Colmenarejo, Sergio Gomez and Novikov, Alexander and Barth-Maron, Gabriel and Gimenez, Mai and Sulsky, Yury and Kay, Jackie and Springenberg, Jost Tobias and others},
+  journal = {arXiv preprint arXiv:2205.06175},
+  year    = {2022}
 }
 
 @misc{tomotopy,
-  author       = {Minchul Lee},
-  title        = {bab2min/tomotopy: 0.12.3},
-  month        = jul,
-  year         = 2022,
-  publisher    = {Zenodo},
-  version      = {v0.12.3},
-  doi          = {10.5281/zenodo.6868418},
-  url          = {https://doi.org/10.5281/zenodo.6868418}
+  author    = {Minchul Lee},
+  title     = {bab2min/tomotopy: 0.12.3},
+  month     = jul,
+  year      = 2022,
+  publisher = {Zenodo},
+  version   = {v0.12.3},
+  doi       = {10.5281/zenodo.6868418},
+  url       = {https://doi.org/10.5281/zenodo.6868418}
 }
 
 @inproceedings{roder2015exploring,
-  title={Exploring the space of topic coherence measures},
-  author={R{\"o}der, Michael and Both, Andreas and Hinneburg, Alexander},
-  booktitle={Proceedings of the eighth ACM international conference on Web search and data mining},
-  pages={399--408},
-  year={2015}
+  title     = {Exploring the space of topic coherence measures},
+  author    = {R{\"o}der, Michael and Both, Andreas and Hinneburg, Alexander},
+  booktitle = {Proceedings of the eighth ACM international conference on Web search and data mining},
+  pages     = {399--408},
+  year      = {2015}
 }
 
 @article{devlin2018bert,
-  title={Bert: Pre-training of deep bidirectional transformers for language understanding},
-  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
-  journal={arXiv preprint arXiv:1810.04805},
-  year={2018},
-  url={https://arxiv.org/abs/1810.04805}
+  title   = {Bert: Pre-training of deep bidirectional transformers for language understanding},
+  author  = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  journal = {arXiv preprint arXiv:1810.04805},
+  year    = {2018},
+  url     = {https://arxiv.org/abs/1810.04805}
 }
 
 @article{raffel2020exploring,
-  title={Exploring the limits of transfer learning with a unified text-to-text transformer.},
-  author={Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J and others},
-  journal={J. Mach. Learn. Res.},
-  volume={21},
-  number={140},
-  pages={1--67},
-  year={2020}
+  title   = {Exploring the limits of transfer learning with a unified text-to-text transformer.},
+  author  = {Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J and others},
+  journal = {J. Mach. Learn. Res.},
+  volume  = {21},
+  number  = {140},
+  pages   = {1--67},
+  year    = {2020}
 }
 
 @inproceedings{sennrich-etal-2016-neural,
-    title = "Neural Machine Translation of Rare Words with Subword Units",
-    author = "Sennrich, Rico  and
-      Haddow, Barry  and
-      Birch, Alexandra",
-    booktitle = "Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
-    month = aug,
-    year = "2016",
-    address = "Berlin, Germany",
-    publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/P16-1162",
-    doi = "10.18653/v1/P16-1162",
-    pages = "1715--1725",
+  title     = {Neural Machine Translation of Rare Words with Subword Units},
+  author    = {Sennrich, Rico  and
+               Haddow, Barry  and
+               Birch, Alexandra},
+  booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month     = aug,
+  year      = {2016},
+  address   = {Berlin, Germany},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://aclanthology.org/P16-1162},
+  doi       = {10.18653/v1/P16-1162},
+  pages     = {1715--1725}
 }
 
 @article{feng2004accessor,
-  title={Accessor variety criteria for Chinese word extraction},
-  author={Feng, Haodi and Chen, Kang and Deng, Xiaotie and Zheng, Weimin},
-  journal={Computational linguistics},
-  volume={30},
-  number={1},
-  pages={75--93},
-  year={2004},
-  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…},
-  url={https://aclanthology.org/J04-1004.pdf}
+  title     = {Accessor variety criteria for Chinese word extraction},
+  author    = {Feng, Haodi and Chen, Kang and Deng, Xiaotie and Zheng, Weimin},
+  journal   = {Computational linguistics},
+  volume    = {30},
+  number    = {1},
+  pages     = {75--93},
+  year      = {2004},
+  publisher = {MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…},
+  url       = {https://aclanthology.org/J04-1004.pdf}
 }
 
 @inproceedings{jin2006unsupervised,
-  title = "Unsupervised Segmentation of {C}hinese Text by Use of Branching Entropy",
-  author = "Jin, Zhihui  and
-    Tanaka-Ishii, Kumiko",
-  booktitle = "Proceedings of the {COLING}/{ACL} 2006 Main Conference Poster Sessions",
-  month = jul,
-  year = "2006",
-  address = "Sydney, Australia",
-  publisher = "Association for Computational Linguistics",
-  url = "https://aclanthology.org/P06-2056",
-  pages = "428--435",
+  title     = {Unsupervised Segmentation of {C}hinese Text by Use of Branching Entropy},
+  author    = {Jin, Zhihui  and
+               Tanaka-Ishii, Kumiko},
+  booktitle = {Proceedings of the {COLING}/{ACL} 2006 Main Conference Poster Sessions},
+  month     = jul,
+  year      = {2006},
+  address   = {Sydney, Australia},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://aclanthology.org/P06-2056},
+  pages     = {428--435}
 }
 
 @incollection{harris1970phoneme,
-  title={From phoneme to morpheme},
-  author={Harris, Zellig S},
-  booktitle={Papers in structural and transformational linguistics},
-  pages={32--67},
-  year={1970},
-  publisher={Springer},
-  url={http://www.eecs.qmul.ac.uk/~mpurver/papers/griffiths-et-al15qitl.pdf}
+  title     = {From phoneme to morpheme},
+  author    = {Harris, Zellig S},
+  booktitle = {Papers in structural and transformational linguistics},
+  pages     = {32--67},
+  year      = {1970},
+  publisher = {Springer},
+  url       = {http://www.eecs.qmul.ac.uk/~mpurver/papers/griffiths-et-al15qitl.pdf}
 }
 
 
 @article{mielke2021between,
-  title={Between words and characters: A Brief History of Open-Vocabulary Modeling and Tokenization in NLP},
-  author={Mielke, Sabrina J and Alyafeai, Zaid and Salesky, Elizabeth and Raffel, Colin and Dey, Manan and Gall{\'e}, Matthias and Raja, Arun and Si, Chenglei and Lee, Wilson Y and Sagot, Beno{\^\i}t and others},
-  journal={arXiv preprint arXiv:2112.10508},
-  year={2021},
-  url = {https://arxiv.org/abs/2112.10508},
+  title   = {Between words and characters: A Brief History of Open-Vocabulary Modeling and Tokenization in NLP},
+  author  = {Mielke, Sabrina J and Alyafeai, Zaid and Salesky, Elizabeth and Raffel, Colin and Dey, Manan and Gall{\'e}, Matthias and Raja, Arun and Si, Chenglei and Lee, Wilson Y and Sagot, Beno{\^\i}t and others},
+  journal = {arXiv preprint arXiv:2112.10508},
+  year    = {2021},
+  url     = {https://arxiv.org/abs/2112.10508}
 }
 
 @article{xue2022byt5,
-  title={ByT5: Towards a token-free future with pre-trained byte-to-byte models},
-  author={Xue, Linting and Barua, Aditya and Constant, Noah and Al-Rfou, Rami and Narang, Sharan and Kale, Mihir and Roberts, Adam and Raffel, Colin},
-  journal={Transactions of the Association for Computational Linguistics},
-  volume={10},
-  pages={291--306},
-  year={2022},
-  publisher={MIT Press},
-  url={https://arxiv.org/pdf/2105.13626v1.pdf}
+  title     = {ByT5: Towards a token-free future with pre-trained byte-to-byte models},
+  author    = {Xue, Linting and Barua, Aditya and Constant, Noah and Al-Rfou, Rami and Narang, Sharan and Kale, Mihir and Roberts, Adam and Raffel, Colin},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  volume    = {10},
+  pages     = {291--306},
+  year      = {2022},
+  publisher = {MIT Press},
+  url       = {https://arxiv.org/pdf/2105.13626v1.pdf}
 }
 
 @article{bengio2003neural,
-  title={A Neural Probabilistic Language Model},
-  author={Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Jauvin, Christian},
-  journal={Journal of Machine Learning Research},
-  volume={3},
-  pages={1137--1155},
-  year={2003},
-  url={https://jmlr.org/papers/volume3/bengio03a/bengio03a.pdf}
+  title   = {A Neural Probabilistic Language Model},
+  author  = {Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Jauvin, Christian},
+  journal = {Journal of Machine Learning Research},
+  volume  = {3},
+  pages   = {1137--1155},
+  year    = {2003},
+  url     = {https://jmlr.org/papers/volume3/bengio03a/bengio03a.pdf}
 }
 
 @article{mikolov2013distributed,
-  title={Distributed representations of words and phrases and their compositionality},
-  author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
-  journal={Advances in neural information processing systems},
-  volume={26},
-  year={2013}
+  title   = {Distributed representations of words and phrases and their compositionality},
+  author  = {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+  journal = {Advances in neural information processing systems},
+  volume  = {26},
+  year    = {2013}
 }
 
 @inproceedings{pennington2014glove,
-    title = "{G}lo{V}e: Global Vectors for Word Representation",
-    author = "Pennington, Jeffrey  and
-      Socher, Richard  and
-      Manning, Christopher",
-    booktitle = "Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing ({EMNLP})",
-    month = oct,
-    year = "2014",
-    address = "Doha, Qatar",
-    publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/D14-1162",
-    doi = "10.3115/v1/D14-1162",
-    pages = "1532--1543",
+  title     = {{G}lo{V}e: Global Vectors for Word Representation},
+  author    = {Pennington, Jeffrey  and
+               Socher, Richard  and
+               Manning, Christopher},
+  booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing ({EMNLP})},
+  month     = oct,
+  year      = {2014},
+  address   = {Doha, Qatar},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://aclanthology.org/D14-1162},
+  doi       = {10.3115/v1/D14-1162},
+  pages     = {1532--1543}
 }
 
 @article{bojanowski2016enriching,
-  title={Enriching Word Vectors with Subword Information},
-  author={Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
-  journal={arXiv preprint arXiv:1607.04606},
-  year={2016},
-  url={https://arxiv.org/pdf/1607.04606.pdf}
+  title   = {Enriching Word Vectors with Subword Information},
+  author  = {Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
+  journal = {arXiv preprint arXiv:1607.04606},
+  year    = {2016},
+  url     = {https://arxiv.org/pdf/1607.04606.pdf}
 }
 
 @article{yang2019xlnet,
-  title={XLNet: Generalized autoregressive pretraining for language understanding},
-  author={Yang, Zhilin and Dai, Zihang and Yang, Yiming and Carbonell, Jaime and Salakhutdinov, Russ R and Le, Quoc V},
-  journal={Advances in neural information processing systems},
-  volume={32},
-  year={2019},
-  url={https://arxiv.org/pdf/1906.08237.pdf}
+  title   = {XLNet: Generalized autoregressive pretraining for language understanding},
+  author  = {Yang, Zhilin and Dai, Zihang and Yang, Yiming and Carbonell, Jaime and Salakhutdinov, Russ R and Le, Quoc V},
+  journal = {Advances in neural information processing systems},
+  volume  = {32},
+  year    = {2019},
+  url     = {https://arxiv.org/pdf/1906.08237.pdf}
 }
 
 # Robotic Drawings
 
 @inproceedings{wang2020robocodraw,
-  title={RoboCoDraw: robotic avatar drawing with GAN-based style transfer and time-efficient path optimization},
-  author={Wang, Tianying and Toh, Wei Qi and Zhang, Hao and Sui, Xiuchao and Li, Shaohua and Liu, Yong and Jing, Wei},
-  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume={34},
-  number={06},
-  pages={10402--10409},
-  year={2020},
-	url={https://ojs.aaai.org/index.php/AAAI/article/view/6609},
+  title     = {RoboCoDraw: robotic avatar drawing with GAN-based style transfer and time-efficient path optimization},
+  author    = {Wang, Tianying and Toh, Wei Qi and Zhang, Hao and Sui, Xiuchao and Li, Shaohua and Liu, Yong and Jing, Wei},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume    = {34},
+  number    = {06},
+  pages     = {10402--10409},
+  year      = {2020},
+  url       = {https://ojs.aaai.org/index.php/AAAI/article/view/6609}
 }
 
 
 # MLOps
 @article{sculley2015hidden,
-  title={Hidden technical debt in machine learning systems},
-  author={Sculley, David and Holt, Gary and Golovin, Daniel and Davydov, Eugene and Phillips, Todd and Ebner, Dietmar and Chaudhary, Vinay and Young, Michael and Crespo, Jean-Francois and Dennison, Dan},
-  journal={Advances in neural information processing systems},
-  volume={28},
-  year={2015}
+  title   = {Hidden technical debt in machine learning systems},
+  author  = {Sculley, David and Holt, Gary and Golovin, Daniel and Davydov, Eugene and Phillips, Todd and Ebner, Dietmar and Chaudhary, Vinay and Young, Michael and Crespo, Jean-Francois and Dennison, Dan},
+  journal = {Advances in neural information processing systems},
+  volume  = {28},
+  year    = {2015}
 }
 
 # Thesis
 
 @article{sutskever2014sequence,
-  title={Sequence to sequence learning with neural networks},
-  author={Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
-  journal={Advances in neural information processing systems},
-  volume={27},
-  year={2014}
+  title   = {Sequence to sequence learning with neural networks},
+  author  = {Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
+  journal = {Advances in neural information processing systems},
+  volume  = {27},
+  year    = {2014}
 }
 
 @article{goodfellow2020generative,
-  title={Generative adversarial networks},
-  author={Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
-  journal={Communications of the ACM},
-  volume={63},
-  number={11},
-  pages={139--144},
-  year={2020},
-  publisher={ACM New York, NY, USA}
+  title     = {Generative adversarial networks},
+  author    = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  journal   = {Communications of the ACM},
+  volume    = {63},
+  number    = {11},
+  pages     = {139--144},
+  year      = {2020},
+  publisher = {ACM New York, NY, USA}
 }
 
 @article{voita2019bottom,
-  title={The bottom-up evolution of representations in the transformer: A study with machine translation and language modeling objectives},
-  author={Voita, Elena and Sennrich, Rico and Titov, Ivan},
-  journal={arXiv preprint arXiv:1909.01380},
-  year={2019}
+  title   = {The bottom-up evolution of representations in the transformer: A study with machine translation and language modeling objectives},
+  author  = {Voita, Elena and Sennrich, Rico and Titov, Ivan},
+  journal = {arXiv preprint arXiv:1909.01380},
+  year    = {2019}
 }
 
 @inproceedings{xu2015show,
-  title={Show, attend and tell: Neural image caption generation with visual attention},
-  author={Xu, Kelvin and Ba, Jimmy and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhudinov, Ruslan and Zemel, Rich and Bengio, Yoshua},
-  booktitle={International conference on machine learning},
-  pages={2048--2057},
-  year={2015},
-  organization={PMLR}
+  title        = {Show, attend and tell: Neural image caption generation with visual attention},
+  author       = {Xu, Kelvin and Ba, Jimmy and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhudinov, Ruslan and Zemel, Rich and Bengio, Yoshua},
+  booktitle    = {International conference on machine learning},
+  pages        = {2048--2057},
+  year         = {2015},
+  organization = {PMLR}
 }
 
 @article{hogan2021knowledge,
-  title={Knowledge graphs},
-  author={Hogan, Aidan and Blomqvist, Eva and Cochez, Michael and d’Amato, Claudia and Melo, Gerard de and Gutierrez, Claudio and Kirrane, Sabrina and Gayo, Jos{\'e} Emilio Labra and Navigli, Roberto and Neumaier, Sebastian and others},
-  journal={ACM Computing Surveys (CSUR)},
-  volume={54},
-  number={4},
-  pages={1--37},
-  year={2021},
-  publisher={ACM New York, NY, USA}
+  title     = {Knowledge graphs},
+  author    = {Hogan, Aidan and Blomqvist, Eva and Cochez, Michael and d’Amato, Claudia and Melo, Gerard de and Gutierrez, Claudio and Kirrane, Sabrina and Gayo, Jos{\'e} Emilio Labra and Navigli, Roberto and Neumaier, Sebastian and others},
+  journal   = {ACM Computing Surveys (CSUR)},
+  volume    = {54},
+  number    = {4},
+  pages     = {1--37},
+  year      = {2021},
+  publisher = {ACM New York, NY, USA}
 }
 
 @article{li2016persona,
-  title={A persona-based neural conversation model},
-  author={Li, Jiwei and Galley, Michel and Brockett, Chris and Spithourakis, Georgios P and Gao, Jianfeng and Dolan, Bill},
-  journal={arXiv preprint arXiv:1603.06155},
-  year={2016}
+  title   = {A persona-based neural conversation model},
+  author  = {Li, Jiwei and Galley, Michel and Brockett, Chris and Spithourakis, Georgios P and Gao, Jianfeng and Dolan, Bill},
+  journal = {arXiv preprint arXiv:1603.06155},
+  year    = {2016}
 }
 
 @inproceedings{huang2016attention,
-  title={Attention-based multimodal neural machine translation},
-  author={Huang, Po-Yao and Liu, Frederick and Shiang, Sz-Rung and Oh, Jean and Dyer, Chris},
-  booktitle={Proceedings of the First Conference on Machine Translation: Volume 2, Shared Task Papers},
-  pages={639--645},
-  year={2016}
+  title     = {Attention-based multimodal neural machine translation},
+  author    = {Huang, Po-Yao and Liu, Frederick and Shiang, Sz-Rung and Oh, Jean and Dyer, Chris},
+  booktitle = {Proceedings of the First Conference on Machine Translation: Volume 2, Shared Task Papers},
+  pages     = {639--645},
+  year      = {2016}
 }
 
 @inproceedings{sap2019atomic,
-  title={Atomic: An atlas of machine commonsense for if-then reasoning},
-  author={Sap, Maarten and Le Bras, Ronan and Allaway, Emily and Bhagavatula, Chandra and Lourie, Nicholas and Rashkin, Hannah and Roof, Brendan and Smith, Noah A and Choi, Yejin},
-  booktitle={Proceedings of the AAAI conference on artificial intelligence},
-  volume={33},
-  number={01},
-  pages={3027--3035},
-  year={2019}
+  title     = {Atomic: An atlas of machine commonsense for if-then reasoning},
+  author    = {Sap, Maarten and Le Bras, Ronan and Allaway, Emily and Bhagavatula, Chandra and Lourie, Nicholas and Rashkin, Hannah and Roof, Brendan and Smith, Noah A and Choi, Yejin},
+  booktitle = {Proceedings of the AAAI conference on artificial intelligence},
+  volume    = {33},
+  number    = {01},
+  pages     = {3027--3035},
+  year      = {2019}
 }
 
 @article{yin2020meta,
-  title={Meta-learning for few-shot natural language processing: A survey},
-  author={Yin, Wenpeng},
-  journal={arXiv preprint arXiv:2007.09604},
-  year={2020}
+  title   = {Meta-learning for few-shot natural language processing: A survey},
+  author  = {Yin, Wenpeng},
+  journal = {arXiv preprint arXiv:2007.09604},
+  year    = {2020}
 }
 
 @article{lester2021power,
-  title={The power of scale for parameter-efficient prompt tuning},
-  author={Lester, Brian and Al-Rfou, Rami and Constant, Noah},
-  journal={arXiv preprint arXiv:2104.08691},
-  year={2021}
+  title   = {The power of scale for parameter-efficient prompt tuning},
+  author  = {Lester, Brian and Al-Rfou, Rami and Constant, Noah},
+  journal = {arXiv preprint arXiv:2104.08691},
+  year    = {2021}
 }
 
 @book{boddington2017towards,
-  title={Towards a code of ethics for artificial intelligence},
-  author={Boddington, Paula},
-  year={2017},
-  publisher={Springer}
+  title     = {Towards a code of ethics for artificial intelligence},
+  author    = {Boddington, Paula},
+  year      = {2017},
+  publisher = {Springer}
+}
+
+# Deep NLP
+
+@article{stiennon2020learning,
+  title   = {Learning to summarize with human feedback},
+  author  = {Stiennon, Nisan and Ouyang, Long and Wu, Jeffrey and Ziegler, Daniel and Lowe, Ryan and Voss, Chelsea and Radford, Alec and Amodei, Dario and Christiano, Paul F},
+  journal = {Advances in Neural Information Processing Systems},
+  volume  = {33},
+  pages   = {3008--3021},
+  year    = {2020}
+}
+
+@article{ouyang2022training,
+  title   = {Training language models to follow instructions with human feedback},
+  author  = {Ouyang, Long and Wu, Jeff and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll L and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and others},
+  journal = {arXiv preprint arXiv:2203.02155},
+  year    = {2022}
+}
+
+@article{tamkin2021understanding,
+  title   = {Understanding the capabilities, limitations, and societal impact of large language models},
+  author  = {Tamkin, Alex and Brundage, Miles and Clark, Jack and Ganguli, Deep},
+  journal = {arXiv preprint arXiv:2102.02503},
+  year    = {2021}
 }
