--- a/book/lectures/nlp_intro/language_models.ipynb
+++ b/book/lectures/nlp_intro/language_models.ipynb
@@ -269,6 +269,202 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d5da0611",
+   "metadata": {},
+   "source": [
+    "## Examples of MLE\n",
+    "\n",
+    "Here's a practical example of MLE using Python. We'll estimate the parameter p of a Bernoulli distribution (coin toss) based on some observed data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2a90560c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLE for p (probability of heads): 0.65\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Observed data (1 for heads, 0 for tails)\n",
+    "data = np.array([1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1])\n",
+    "\n",
+    "# Calculate MLE for p (probability of heads)\n",
+    "mle_p = np.mean(data)\n",
+    "\n",
+    "print(\"MLE for p (probability of heads):\", mle_p)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "502fba90",
+   "metadata": {},
+   "source": [
+    "In this example, we have a sequence of 20 coin tosses, where 1 represents heads, and 0 represents tails. To estimate the probability of getting heads (p) using MLE, we simply calculate the mean of the observed data, which is the ratio of the number of heads to the total number of tosses.\n",
+    "\n",
+    "Here's another example, this time estimating the mean (mu) and standard deviation (sigma) of a Gaussian distribution given some observed data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d1c3965d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLE for mu (mean): 3.4899999999999998\n",
+      "MLE for sigma (standard deviation): 0.6441273166075167\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Observed data\n",
+    "data = np.array([2.5, 3.2, 4.1, 3.7, 2.8, 3.9, 4.5, 3.1, 2.9, 4.2])\n",
+    "\n",
+    "# Calculate MLE for mu (mean) and sigma (standard deviation)\n",
+    "mle_mu = np.mean(data)\n",
+    "mle_sigma = np.std(data)\n",
+    "\n",
+    "print(\"MLE for mu (mean):\", mle_mu)\n",
+    "print(\"MLE for sigma (standard deviation):\", mle_sigma)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c7f999e0",
+   "metadata": {},
+   "source": [
+    "## How to generate n-grams using NLTK\n",
+    "\n",
+    "Here's an example of how to generate n-grams using the Natural Language Toolkit (NLTK) library in Python.\n",
+    "\n",
+    "First, make sure to install NLTK:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7861292e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
+      "Collecting nltk\n",
+      "  Downloading nltk-3.8.1-py3-none-any.whl (1.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m27.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: click in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk) (8.1.3)\n",
+      "Requirement already satisfied: tqdm in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk) (4.65.0)\n",
+      "Collecting joblib\n",
+      "  Downloading joblib-1.2.0-py3-none-any.whl (297 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m298.0/298.0 kB\u001b[0m \u001b[31m100.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: regex>=2021.8.3 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk) (2022.10.31)\n",
+      "Installing collected packages: joblib, nltk\n",
+      "Successfully installed joblib-1.2.0 nltk-3.8.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install nltk"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b3d038f5",
+   "metadata": {},
+   "source": [
+    "Now, let's generate bigrams, trigrams, and 4-grams using NLTK:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f27982ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/yjlee/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bigrams:\n",
+      "[('I', 'love'), ('love', 'natural'), ('natural', 'language'), ('language', 'processing'), ('processing', 'and'), ('and', 'machine'), ('machine', 'learning'), ('learning', '.')]\n",
+      "\n",
+      "Trigrams:\n",
+      "[('I', 'love', 'natural'), ('love', 'natural', 'language'), ('natural', 'language', 'processing'), ('language', 'processing', 'and'), ('processing', 'and', 'machine'), ('and', 'machine', 'learning'), ('machine', 'learning', '.')]\n",
+      "\n",
+      "4-grams:\n",
+      "[('I', 'love', 'natural', 'language'), ('love', 'natural', 'language', 'processing'), ('natural', 'language', 'processing', 'and'), ('language', 'processing', 'and', 'machine'), ('processing', 'and', 'machine', 'learning'), ('and', 'machine', 'learning', '.')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.util import ngrams\n",
+    "\n",
+    "# Download the punkt tokenizer\n",
+    "nltk.download('punkt')\n",
+    "\n",
+    "# Sample text\n",
+    "text = \"I love natural language processing and machine learning.\"\n",
+    "\n",
+    "# Tokenize the text\n",
+    "tokens = nltk.word_tokenize(text)\n",
+    "\n",
+    "# Generate bigrams\n",
+    "bigrams = list(ngrams(tokens, 2))\n",
+    "print(\"Bigrams:\")\n",
+    "print(bigrams)\n",
+    "\n",
+    "# Generate trigrams\n",
+    "trigrams = list(ngrams(tokens, 3))\n",
+    "print(\"\\nTrigrams:\")\n",
+    "print(trigrams)\n",
+    "\n",
+    "# Generate 4-grams (quadgrams)\n",
+    "quadgrams = list(ngrams(tokens, 4))\n",
+    "print(\"\\n4-grams:\")\n",
+    "print(quadgrams)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbcb85ef",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "652df51b",
    "metadata": {},
@@ -286,7 +482,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.12"
   },
   "vscode": {
